<!--
  ~ Copyright 2018 Keval Patel.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="title_activity_builds">Builds</string>
    <string name="title_activity_ci_selector">Select CI server</string>

    <!--About-->
    <string name="about_check_for_update">Checking for the update…</string>
    <string name="check_update_error_message">Cannot check for updates.</string>
    <string name="check_update_new_update_available">New version is available.</string>
    <string name="alert_title_whats_new">What\'s new?</string>
    <string name="support_with_2_00">Support with $2.00</string>
    <string name="support_with_5_00">Support with $5.00</string>
    <string name="support_with_10_00">Support with $10.00</string>
    <string name="support_with_20_00">Support with $20.00</string>
    <string name="title_activity_support_development">Support Development</string>
    <string name="title_activity_report_issue">Report Issue</string>
    <string name="report_issue_description_hint">Description</string>
    <string name="report_issue_title_hint">Title</string>
    <string name="report_issue_update_message">New version of the application is available on the play store with improvements and bug fixes. Please update the application.</string>
    <string name="report_issue_update_title">Update Available</string>
    <string name="report_issue_update_later_btn_title">Later</string>
    <string name="report_issue_update_btn_title">Update</string>
    <string name="error_invalid_issue_title">Provide title to your issue.</string>
    <string name="error_invalid_issue_description">Please describe the issue.</string>
    <string name="error_message_report_issue">Cannot report the issue.</string>
    <string name="issue_success_alert_title">Issue reported.</string>
    <string name="issue_success_alert_message">Your issue id: %d</string>
    <string name="report_issue_reporting_message">Reporting issue</string>
    <string name="prefer_old_school_email"><u>Prefer old school email?</u></string>
    <string name="about_rate_this_app">Rate this app</string>
    <string name="about_report_issue_title">Report an issue</string>
    <string name="about_report_issue_subtitle">Are you facing any issue? Report it here.</string>
    <string name="about_support_development_title">Support Development</string>
    <string name="about_share_with_friends_title">Share with friends</string>
    <string name="about_fork_title">Fork the project</string>
    <string name="about_support_us_card_title">Support Us</string>
    <string name="about_check_version_title">Check version</string>
    <string name="about_open_source_libs_title">Open source libraries</string>
    <string name="about_privacy_policy_title">Privacy policy</string>
    <string name="about_author_name_title">Keval Patel</string>
    <string name="about_author_github_title">Follow on GitHub</string>
    <string name="about_author_twitter_title">Follow on Twitter</string>
    <string name="about_author_join_slack_title">Join Slack</string>
    <string name="about_app_github_title">View on GitHub</string>
    <string name="about_app_connect_with_us_title">Connect with us</string>
    <string name="about_app_send_email_title">Send an Email</string>
    <string name="about_card_title_about">About</string>
    <string name="about_card_title_author">Author</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_no_environment_variable_set">No environment variable set.</string>
    <string name="error_no_cache_available">There is nothing in cache!!!</string>
    <string name="error_no_repo_available">You don\'t have any repository set up for CI.</string>
    <string name="error_no_build_started">No build started yet.</string>
    <string name="error_no_branch_found">No branch found.</string>
    <string name="btn_title_edit">Edit</string>
    <string name="btn_title_delete">Delete</string>
    <string name="btn_title_start">Start</string>
    <string name="btn_title_run_now">Run now</string>
    <string name="cache_prefix">Cache_%s</string>
    <string name="delete_cache_title_confirmation_title">Do you want to delete cache?</string>
    <string name="delete_env_variable_title_confirmation_title">Do you want to delete %s?</string>
    <string name="delete_cron_title_confirmation_title">Do you want to delete cron on %s branch?</string>
    <string name="start_cron_title_confirmation_title">Do you want to start cron manually?</string>
    <string name="btn_title_save">Save</string>
    <string name="edit_variable_switch_title_display_value_in_logs">Display value in logs?</string>
    <string name="message_variable_edit_success">Variable edited successfully.</string>
    <string name="error_edit_variable_empty_name">Enter variable name.</string>
    <string name="error_edit_variable_empty_value">Enter variable value.</string>
    <string name="error_cron_available">No crons are scheduled.</string>
    <string name="cron_last_ran_never">Never ran before.</string>
    <string name="cron_last_ran_before">Ran %s ago.</string>
    <string name="cron_next_run_never">Next run is not scheduled.</string>
    <string name="cron_next_run_after">Scheduled in %s from now.</string>
    <string name="cron_started_success">Cron started successfully.</string>
    <string name="btn_title_select">Select</string>
    <string name="branch_default">Default</string>
    <string name="title_dialog_branch_picker">Select branch</string>
    <string name="title_dialog_interval_picker">Select interval</string>
    <string name="title_activity_add_cron">Schedule new cron</string>
    <string name="hint_select_branch">-- Select branch --</string>
    <string name="switch_title_don_t_run_if_recent_build_exists">Don\'t run if recent build exists?</string>
    <string name="add_cron_error_cannot_load_interval">Cannot load intervals.</string>
    <string name="error_invalid_interval">Invalid interval.</string>
    <string name="error_invalid_branch">Invalid branch name.</string>
    <string name="btn_title_schedule">Schedule</string>
    <string name="schedule_cron_success_message">Cron scheduled successfully.</string>
    <string name="build_row_ran_for">Ran for %s</string>
    <string name="recent_build_status">Recent build: %s</string>
    <string name="last_build_time">Ran %s ago</string>
    <string name="last_build_time_1">Ran on %s</string>
    <string name="build_status_badge_title">Build on %s</string>
    <string name="chip_private">Private</string>
    <string name="chip_owner">Owner</string>
    <string name="chip_java">Java</string>
    <string name="menu_name_sort">Sort</string>
    <string name="menu_name_filter">Filter</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_last_build_time">By last build time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_title_repository">Repository</string>
    <string name="nav_menu_title_builds">Builds</string>
    <string name="nav_menu_title_about">About</string>
    <string name="nav_menu_title_logout">Logout</string>
    <string name="title_activity_repo">Repository</string>
    <string name="title_activity_builds_list">Recent builds</string>
    <string name="open_email_bottom_dialog_title">Send email via…</string>
    <string name="contact_us_on_support_email_title" translatable="false">Query regarding Green Build</string>
    <string name="app_invite_message" translatable="false">Check out this new app: Green Build. Green Build is an open source CI client for Android. Green Build allows you to view and manage your continuous integration projects from your phone. Download: http://bit.ly/2KitKV4</string>
    <string name="title_activity_open_source_libs">We  ♡  Open source</string>
    <string name="about_update_card_text">New version is %s. Click here to new version.</string>
    <string name="dialog_title_report_issue">Report issue</string>
    <string name="dialog_message_report_issue">Found a bug? Report it by generating issue on GitHub repo or shoot an email to us.</string>
    <string name="dialog_positive_report_issue">Create issue on GitHub</string>
    <string name="dialog_negative_report_issue">Report issue by email</string>
    <string name="issue_email_title" translatable="false">Issue on Green Build</string>
    <string name="logout_confirmation_dialog_message">Do you want to logout from this account?</string>
    <string name="logout_confirmation_dialog_positive_title">Logout</string>
    <string name="logout_progress_dialog_message">Logging out...</string>
    <string name="error_logging_out">Cannot remove this account.</string>
    <string name="success_message_build_restart">Build restarted successfully.</string>
    <string name="success_message_build_abort">Build aborted successfully.</string>
    <string name="btn_title_abort">Abort</string>
    <string name="btn_title_restart">Restart</string>
</resources>
