<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Keval Patel.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_bar_app_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_drawer_repo_listing"
            android:checkable="true"
            android:icon="@drawable/ic_repository_white"
            android:title="@string/nav_menu_title_repository"/>
        <item
            android:id="@+id/menu_drawer_builds_listing"
            android:checkable="true"
            android:icon="@drawable/ic_builds"
            android:title="@string/nav_menu_title_builds"/>
    </group>
    <group
        android:id="@+id/nav_bar_app_extras"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_menu_title_about"/>
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_menu_title_logout"/>
    </group>
</menu>
